--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 streamlit
-google-generativeai==0.8.3
+google-generativeai
 openai
 requests
 beautifulsoup4
@@ -7,3 +7,7 @@ youtube-transcript-api
 yt-dlp
 firebase-admin
 PyPDF2
+pydub
+typing_extensions
+httplib2==0.22.0
+pyparsing==3.1.1
